oxiplate-derive/tests/config/expected/require-specifying-escaper-string.stderr
error: Failed to parse `/oxiplate.toml`: String value not allowed for `require_specifying_escaper`
 --> tests/broken/require-specifying-escaper-string.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
